# sparkle-cache

./: .gitignore  Cargo.toml  README.md
src/: backend.rs  cache.rs  lib.rs  model.rs  tests.rs
src/model/: channel.rs  emoji.rs  guild.rs  member.rs  message.rs  presence.rs  reaction.rs  role.rs  sticker.rs
