[package]
name = "sparkle-cache"
version = "0.13.18"
authors = ["lara <laralove143@icloud.com>"]
edition = "2021"
description = "A backend-agnostic Discord cache implementation for the Twilight ecosystem."
repository = "https://github.com/laralove143/sparkle-cache/"
license = "ISC"
keywords = ["discord", "discord-api", "twilight"]
categories = ["api-bindings", "asynchronous", "caching"]

[features]
tests = ["dep:twilight-http", "dep:twilight-gateway", "dep:futures", "dep:anyhow"]

[dependencies]
twilight-model = "0.13"
twilight-util = { version = "0.13", features = ["permission-calculator"] }
async-trait = "0.1"
thiserror = "1.0"
time = "0.3"
twilight-http = { version = "0.13", optional = true }
twilight-gateway = { version = "0.13", optional = true }
futures = { version = "0.3", default-features = false, optional = true }
anyhow = { version = "1.0", optional = true }